--- a/users/templates/users/partials/_sign-in.html
+++ b/users/templates/users/partials/_sign-in.html
@@ -65,3 +65,5 @@
         <p class="section__subtitle">New here? <a class="nav-link" href="sign-up.html">Create an account</a></p>
     </div>
 </main>
+<script src="{% static 'users/js/user-validation.js' %}"></script>
+
