--- a/shop/templates/shop/product-listings.html
+++ b/shop/templates/shop/product-listings.html
@@ -1,9 +1,9 @@
 {% extends 'shop/base.html' %}
 {% load static %}
-{% block extra_styles %} <link rel="stylesheet" href="{% static 'css/product-listings.css' %}"> {% endblock extra_styles %}
+{% block extra_styles %} <link rel="stylesheet" href="{% static 'shop/css/product-listings.css' %}"> {% endblock extra_styles %}
 {% block content %}
 
-    <main class="container section page-product-listings">
+    <main id="main-container" class="container section page-product-listings">
       <div class="section__header">
         <div>
           <h1 class="section__title">All products</h1>
@@ -35,70 +35,48 @@
           </div>
 
           <div class="product-grid">
-            <article class="card product-card">
-              <a class="product-card__link" href="product-detail.html">
-                <div class="product-card__image">
-                  <img src="https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?auto=format&fit=crop&w=800&q=80" alt="Wool coat">
-                </div>
-                <h3 class="product-card__title">Merino Wool Topcoat</h3>
-                <div class="product-card__meta">
-                  <span>$320</span>
-                  <span class="rating">
-                    <svg class="star" viewBox="0 0 24 24"><polygon points="12 2 15.1 8.4 22 9.2 17 14.1 18.3 21 12 17.5 5.7 21 7 14.1 2 9.2 8.9 8.4 12 2"/></svg>
-                    4.9
-                  </span>
-                </div>
-              </a>
-              <button class="btn btn--secondary" type="button">Add to cart <span class="btn__counter">0</span></button>
-            </article>
-            <article class="card product-card">
-              <a class="product-card__link" href="product-detail.html">
-                <div class="product-card__image">
-                  <img src="https://images.unsplash.com/photo-1542293787938-4d272614c4f9?auto=format&fit=crop&w=800&q=80" alt="Brown boots">
-                </div>
-                <h3 class="product-card__title">Heritage Leather Boot</h3>
-                <div class="product-card__meta">
-                  <span>$240</span>
-                  <span class="rating">
-                    <svg class="star" viewBox="0 0 24 24"><polygon points="12 2 15.1 8.4 22 9.2 17 14.1 18.3 21 12 17.5 5.7 21 7 14.1 2 9.2 8.9 8.4 12 2"/></svg>
-                    4.7
-                  </span>
-                </div>
-              </a>
-              <button class="btn btn--secondary" type="button">Add to cart <span class="btn__counter">0</span></button>
-            </article>
-            <article class="card product-card">
-              <a class="product-card__link" href="product-detail.html">
-                <div class="product-card__image">
-                  <img src="https://images.unsplash.com/photo-1489987707025-afc232f7ea0f?auto=format&fit=crop&w=800&q=80" alt="Backpack">
-                </div>
-                <h3 class="product-card__title">Commuter Tech Backpack</h3>
-                <div class="product-card__meta">
-                  <span>$180</span>
-                  <span class="rating">
-                    <svg class="star" viewBox="0 0 24 24"><polygon points="12 2 15.1 8.4 22 9.2 17 14.1 18.3 21 12 17.5 5.7 21 7 14.1 2 9.2 8.9 8.4 12 2"/></svg>
-                    4.8
-                  </span>
-                </div>
-              </a>
-              <button class="btn btn--secondary" type="button">Add to cart <span class="btn__counter">0</span></button>
-            </article>
-            <article class="card product-card">
-              <a class="product-card__link" href="product-detail.html">
-                <div class="product-card__image">
-                  <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=800&q=80" alt="Oxford shirt">
-                </div>
-                <h3 class="product-card__title">Tailored Oxford Shirt</h3>
-                <div class="product-card__meta">
-                  <span>$110</span>
-                  <span class="rating">
-                    <svg class="star" viewBox="0 0 24 24"><polygon points="12 2 15.1 8.4 22 9.2 17 14.1 18.3 21 12 17.5 5.7 21 7 14.1 2 9.2 8.9 8.4 12 2"/></svg>
-                    4.5
-                  </span>
-                </div>
-              </a>
-              <button class="btn btn--secondary" type="button">Add to cart <span class="btn__counter">0</span></button>
-            </article>
+        {% for product in products %}
+          <article class="card product-card">
+          
+          <a 
+          class="product-card__link" 
+          hx-push-url="true"
+          href="{% url 'shop:product-detail' product.slug %}"
+          >   
+              <div class="product-card__image">
+              <img src="{{product.first_image_for_cover}}" alt="Structured blazer">
+              </div>
+              <h3 class="product-card__title">{{product.name}}</h3>
+              <div class="product-card__meta">
+              <span>${{product.details.0.unit_price}}</span>
+              <span class="rating">
+                  <svg class="star" viewBox="0 0 24 24"><polygon points="12 2 15.1 8.4 22 9.2 17 14.1 18.3 21 12 17.5 5.7 21 7 14.1 2 9.2 8.9 8.4 12 2"/></svg>
+                  4.8
+              </span>
+              </div>
+          </a>
+          <button  
+          class="btn btn--secondary" 
+          type="button"
+          hx-post="{% url 'shop:add-to-cart' %}"
+          hx-vals = '{
+              "id": "{{ product.id }}",
+              "name": "{{ product.name}}",
+              "image_url": "{{ product.first_image_for_cover }}",
+              "image_id": "{{ product.details.0.image_id}}",
+              "price": "{{ product.details.0.unit_price }}",
+              "color": "{{ product.details.0.color }}",
+              "curr_total_quantity": "{{ product.details.0.quantity }}",
+              "quantity_requested":"",
+              "size": "{{ product.details.0.size }}",
+              "slug": "{{ product.slug }}",
+              "from": "index"
+          }'
+          hx-target="#cart-count-top"
+          hx-swap="outerHTML"
+          >Add to cart <span id="cart-counter-on-product-{{product.id}}" class="btn__counter">{{product.quantity_in_cart}}</span></button>
+          </article>
+        {% endfor %}
           </div>
         </section>
       </div>
