added loading spinner

--- a/users/templates/users/partials/_sign-in.html
+++ b/users/templates/users/partials/_sign-in.html
@@ -58,7 +58,18 @@
             </div>
             <div class="cta-row">
             
-            <button id="submit-btn" class="btn btn--primary" type="submit">Sign in</button>
+            <button 
+            id="submit-btn" 
+            class="btn btn--primary" 
+            type="submit"
+
+            >Sign in
+                <img 
+                src="../../../static/users/images/oval.svg" 
+                class="htmx-indicator"
+                width="20px"
+                alt="">
+            </button>
             <a class="nav-link" href="password-reset.html">Forgot password?</a>
             </div>
         </form>
