--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="{% static 'shop/css/product-listings.css' %}">
   <link rel="stylesheet" href="{% static 'users/css/auth.css' %}">
   <link rel="stylesheet" href="{% static 'shop/css/index.css' %}">
+  <meta name="htmx-config" content='{"scrollIntoViewOnBoost": false}'>
   {% block extra_styles %}<link rel="stylesheet" href="{% static 'shop/css/index.css' %}">
   {% endblock extra_styles %}
   {%htmx_script%}
