fixed pagination flaw with loading page without header

--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -44,7 +44,7 @@
         <a 
         class="nav-link" 
         {% if request.user.is_authenticated %}
-            href="{% url 'users:sign-in' %}"
+            href="{% url 'users:user-dashboard' %}"
             >Account</a>
         {% else %}
             href="{% url 'users:sign-in' %}"
