--- a/shop/templates/shop/partials/_index.html
+++ b/shop/templates/shop/partials/_index.html
@@ -59,6 +59,7 @@
     hx-boost="true"
     hx-target="body"
     hx-swap="innerHTML transition:true"
+    id="products_list"
     >
         {% for product in products %}
         <article class="card product-card">
@@ -104,7 +105,7 @@
         {% endfor %}
     </div>
 
-    <div class="pagination" hx-boost="true">
+    <div id="pagination_nums" class="pagination" hx-boost="true">
         {% for page_num in products.paginator.page_range %}
           {% if page_num >= products.number|add:'-2' and page_num <= products.number|add:'2'  %}
 
@@ -116,10 +117,12 @@
 
             href="{% url 'shop:home' %}?page={{page_num}}" 
             hx-push-url = "true"
-            hx-swap = "innerHTML transition:true"
+            hx-vals='{
+                "from_paginated":"true"
+            }'
+            hx-target = "#pagination_nums"
+            hx-swap = "outerHTML transition:true"
             >{{page_num}}</a>
-        <!-- <span class="pagination__item">2</span>
-        <span class="pagination__item">›</span> -->
           {% endif %}
         {% endfor %}
     </div>
