added category detail page

--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="{% static 'shop/css/cart.css' %}">
   <link rel="stylesheet" href="{% static 'shop/css/product-listings.css' %}">
   <link rel="stylesheet" href="{% static 'users/css/auth.css' %}">
+  <link rel="stylesheet" href="{% static 'shop/css/checkout.css' %}">
   <link rel="stylesheet" href="{% static 'shop/css/index.css' %}">
   <meta name="htmx-config" content='{"scrollIntoViewOnBoost": false}'>
   {% block extra_styles %}<link rel="stylesheet" href="{% static 'shop/css/index.css' %}">
