--- a/shop/templates/shop/partials/_cart.html
+++ b/shop/templates/shop/partials/_cart.html
@@ -36,7 +36,7 @@
             <span>$785</span>
         </div>
         </div>
-        <a class="btn btn--primary" href="checkout.html">Proceed to checkout</a>
+        <a class="btn btn--primary" href="{% url 'shop:checkout' %}">Proceed to checkout</a>
     </aside>
     </div>
 </main>
