--- a/shop/templates/shop/partials/_index.html
+++ b/shop/templates/shop/partials/_index.html
@@ -35,10 +35,9 @@
         <a class="nav-link" href="products.html">Browse all</a>
     </div>
     <div class="categories">
-        <a class="category-button" href="{% url 'shop:product-listings' %}">Work essentials</a>
-        <a class="category-button" href="products.html">Casual layers</a>
-        <a class="category-button" href="products.html">Accessories</a>
-        <a class="category-button" href="products.html">Home & lifestyle</a>
+        {% for category in categories %}
+        <a class="category-button" href="{% url 'shop:category-detail' category.slug  %}">{{category.name}}</a>
+        {% endfor %}
     </div>
     </section>
 
