fixed bug with caetgory detail page

--- a/shop/templates/shop/partials/_category_detail.html
+++ b/shop/templates/shop/partials/_category_detail.html
@@ -13,7 +13,7 @@
             href="{% url 'shop:product-detail' product.slug %}"
             >   
                 <div class="product-card__image">
-                <img src="/media/{{product.first_image_for_cover}}" alt="Structured blazer">
+                <img src="{{product.first_image_for_cover}}" alt="Structured blazer">
                 </div>
                 <h3 class="product-card__title">{{product.name}}</h3>
                 <div class="product-card__meta">
