--- a/shop/static/shop/css/product-listings.css
+++ b/shop/static/shop/css/product-listings.css
@@ -66,8 +66,9 @@
 }
 
 .page-product-listings .pagination__item {
-  width: 38px;
+  width: fit-content;
   height: 38px;
+  padding: .5rem;
   border-radius: var(--radius-md);
   border: 1px solid var(--color-border);
   display: inline-flex;
