--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -31,13 +31,16 @@
     class="brand" 
     href="{% url 'shop:home' %}"
     >Northwind Commerce</a>
-    <label class="search" for="search">
+    <a href="#search_form">
+        <label class="search" style="width: 8rem;" for="search">
         <svg width="18" height="18" fill="none" stroke="currentColor" stroke-width="2">
         <circle cx="8" cy="8" r="6" />
         <line x1="13" y1="13" x2="17" y2="17" />
         </svg>
-        <input id="search" class="search__input" type="search" placeholder="Search products, brands, categories">
+        Search
     </label>
+    </a>
+
     
     <div class="topbar__actions">
 
