--- a/shop/templates/shop/partials/_pagination.html
+++ b/shop/templates/shop/partials/_pagination.html
@@ -95,54 +95,4 @@ href="{% url 'shop:home' %}?page={% if p.has_next %}{{p.next_page_number}}{% els
     </div>
 {% endwith %}
 
-<div 
-id="products_list"
-class="grid grid--four" 
-hx-boost="true"
-hx-target="body"
-hx-swap="outerHTML transition:true"
-hx-swap-oob="true"
->
-    {% for product in products %}
-    <article class="card product-card">
-    
-    <a 
-    class="product-card__link" 
-    hx-push-url="true"
-    href="{% url 'shop:product-detail' product.slug %}"
-    >   
-        <div class="product-card__image">
-        <img src="{{product.first_image_for_cover}}" alt="Structured blazer">
-        </div>
-        <h3 class="product-card__title">{{product.name}}</h3>
-        <div class="product-card__meta">
-        <span>${{product.details.0.unit_price}}</span>
-        <span class="rating">
-            <svg class="star" viewBox="0 0 24 24"><polygon points="12 2 15.1 8.4 22 9.2 17 14.1 18.3 21 12 17.5 5.7 21 7 14.1 2 9.2 8.9 8.4 12 2"/></svg>
-            4.8
-        </span>
-        </div>
-    </a>
-    <button  
-    class="btn btn--secondary" 
-    type="button"
-    hx-post="{% url 'shop:add-to-cart' %}"
-    hx-vals = '{
-        "id": "{{ product.id }}",
-        "name": "{{ product.name}}",
-        "image_url": "{{ product.first_image_for_cover }}",
-        "image_id": "{{ product.details.0.image_id}}",
-        "price": "{{ product.details.0.unit_price }}",
-        "color": "{{ product.details.0.color }}",
-        "curr_total_quantity": "{{ product.details.0.quantity }}",
-        "quantity_requested":"",
-        "size": "{{ product.details.0.size }}",
-        "slug": "{{ product.slug }}",
-        "from": "index"
-    }'
-    hx-target="#cart-count-top"
-    hx-swap="outerHTML"
-    >Add to cart <span id="cart-counter-on-product-{{product.id}}" class="btn__counter">{{product.quantity_in_cart}}</span></button>
-    </article>
-    {% endfor %}
-</div>
+{% include 'shop/partials/_products_list.html' %}
