--- a/shop/templates/shop/partials/_cart_items.html
+++ b/shop/templates/shop/partials/_cart_items.html
@@ -100,10 +100,16 @@ hx-boost="true"
  
 {% endif %}
 
+<span
+id="order-total"
+hx-swap-oob="true"
+> GHS {{cart_total}}</span>
+
 {% if request.htmx and "cart" in request.META.HTTP_REFERER %}
     {% include 'shop/partials/_cart-counter-main.html' %}
 {% endif %}
 {% include 'shop/partials/_toasts.html' %}
+
 
 {% if mergeable_products %}
     <dialog
