--- a/shop/templates/shop/partials/_checkout.html
+++ b/shop/templates/shop/partials/_checkout.html
@@ -1,4 +1,4 @@
-    <main id="main-container"  class="container section .page-checkout">
+    <main id="main-container"  class="container section page-checkout">
       <div class="section__header">
         <div>
           <h1 class="section__title">Checkout</h1>
@@ -12,18 +12,31 @@
         <span class="steps__item"><span class="pill-number">3</span> Review</span>
       </div>
 
+        <ul>
+          <li> Make sure you fill all details so u can pay </li>
+        </ul>
+
       <div class="checkout-layout">
         <section class="card form">
           <h3 style="margin:0;">Shipping details</h3>
-          <div class="form__group">
-            <label class="form__label" for="full-name">Full name</label>
-            <input id="full-name" class="form__control" type="text" placeholder="Alex Taylor">
+          <div class="form__group first-last">
+            <div class="first-name">
+              <label class="form__label" for="full-name">First name</label>
+              <input id="first-name" class="form__control" type="text" placeholder="Alex">
+            </div>
+            <div class="last-name">
+              <label class="form__label" for="full-name">Last name</label>
+              <input id="last-name" class="form__control" type="text" placeholder="Taylor">
+            </div>
+
           </div>
           <div class="form__group">
-            <label class="form__label" for="address">Address</label>
-            <input id="address" class="form__control" type="text" placeholder="42 Market Street">
+            <label class="form__label" for="address">Email</label>
+            <input id="address" class="form__control" type="text" placeholder="john_doe@gmail.com">
           </div>
-          <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); gap: var(--space-md);">
+
+
+          <div class="form__group other-details-grid ">
             <div class="form__group">
               <label class="form__label" for="city">City</label>
               <input id="city" class="form__control" type="text" placeholder="Seattle">
@@ -32,18 +45,19 @@
               <label class="form__label" for="country">Country</label>
               <input id="country" class="form__control" type="text" placeholder="United States">
             </div>
-            <div class="form__group">
+            <!-- <div class="form__group">
               <label class="form__label" for="postal">Postal code</label>
               <input id="postal" class="form__control" type="text" placeholder="98101">
-            </div>
+            </div> -->
             <div class="form__group">
               <label class="form__label" for="phone">Phone</label>
               <input id="phone" class="form__control" type="tel" placeholder="+1 (555) 230-8890">
             </div>
           </div>
 
-          <h3 style="margin: var(--space-lg) 0 var(--space-sm);">Payment</h3>
-          <div class="form__group">
+
+          <!-- <h3 style="margin: var(--space-lg) 0 var(--space-sm);">Payment</h3> -->
+          <!-- <div class="form__group">
             <label class="form__label" for="name-card">Name on card</label>
             <input id="name-card" class="form__control" type="text" placeholder="Alex Taylor">
           </div>
@@ -60,52 +74,107 @@
               <label class="form__label" for="cvv">CVV</label>
               <input id="cvv" class="form__control" type="password" placeholder="•••">
             </div>
-          </div>
+          </div> -->
 
-          <div class="cta-row" style="margin-top: var(--space-lg);">
+          <!-- <div class="cta-row" style="margin-top: var(--space-lg);">
             <a class="btn btn--primary" href="#">Review order</a>
             <a class="btn btn--ghost" href="cart.html">Back to cart</a>
-          </div>
+          </div> -->
         </section>
 
         <aside class="order-summary">
           <h3 style="margin:0;">Order summary</h3>
           <div class="order-items">
-            <div class="order-item">
-              <img src="https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?auto=format&fit=crop&w=300&q=80" alt="Coat">
-              <div>
-                <strong>Commuter Mac Coat</strong>
-                <p class="section__subtitle">Storm — M</p>
+            {% for item, value in cart.items %}
+              <div class="order-item">
+                <div class="order-item-img-wrapper">
+                  <img src="{{value.image_url}}" alt="Coat">
+                </div>
+
+                <div>
+                  <strong>{{value.name}}</strong>
+                  <div class="item-details">
+                    <p class="section__subtitle">Size: {{value.size}},</p>
+                    <p class="order-item-size">Color: {{value.color}},</p>
+                    <p class="order-item-qty">Qty: {{value.quantity}}</p>
+                    <p class="order-item-qty">Pr:₵ {{value.price|floatformat:2}}</p>
+                  </div>
+
+                </div>
+
+                <span> ₵{{value.sub_total }}</span>
               </div>
-              <span>$280</span>
-            </div>
-            <div class="order-item">
-              <img src="https://images.unsplash.com/photo-1475180098004-ca77a66827be?auto=format&fit=crop&w=300&q=80" alt="Bag">
+            {% endfor %}
+
+            <!-- <div class="order-item">
+              <div class="order-item-img-wrapper">
+                <img src="https://images.unsplash.com/photo-1475180098004-ca77a66827be?auto=format&fit=crop&w=300&q=80" alt="Bag">
+              </div>
+
               <div>
                 <strong>Weekender Duffel</strong>
-                <p class="section__subtitle">Navy</p>
+                <div class="item-details">
+                  <p class="section__subtitle">Storm — M</p>
+                  <p class="order-item-size"> Color: Red</p>
+                  <p class="order-item-qty"> Qty: 36</p>
+                </div>
+                
               </div>
+
               <span>$210</span>
-            </div>
+              
+              
+            </div> -->
           </div>
+
           <div class="totals">
-            <div class="totals__row">
+            <!-- <div class="totals__row">
               <span>Subtotal</span>
               <span>$490</span>
-            </div>
-            <div class="totals__row">
+            </div> -->
+            <!-- <div class="totals__row">
               <span>Shipping</span>
               <span>$20</span>
-            </div>
+            </div> -->
             <div class="totals__row">
               <span>Tax</span>
-              <span>$45</span>
+              <span>$0.00</span>
             </div>
             <div class="totals__row totals__grand">
               <span>Total</span>
-              <span>$555</span>
+              <span>GHS {{cart_total}}</span>
             </div>
+
+            <button  class="btn btn--primary payBtn"> Pay </button>
+            <!-- <button class="btn btn--primary" href="#">Pay</a> -->
+
           </div>
         </aside>
       </div>
     </main>
+
+    <script>
+
+      document.addEventListener("DOMContentLoaded", checkEmptyFields);
+      const inputs = document.querySelectorAll(".form__control");
+
+      for(const input of inputs){
+        input.addEventListener(
+          "keyup", checkEmptyFields
+        )
+      }
+      function checkEmptyFields(){
+        const payBtn = document.querySelector(".payBtn");
+        let disableBtn = false;
+
+        for(const input of inputs){
+
+          if(input.value.trim() == ""){
+            disableBtn = true;
+          }
+        }
+        
+        payBtn.disabled = disableBtn;
+      }
+
+    </script>
