--- a/shop/static/shop/css/checkout.css
+++ b/shop/static/shop/css/checkout.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 .page-checkout .checkout-layout {
   display: grid;
   gap: var(--space-xl);
@@ -9,9 +13,8 @@
   border: 1px solid var(--color-border);
   border-radius: var(--radius-lg);
   padding: var(--space-lg);
-  display: grid;
-  gap: var(--space-md);
   box-shadow: var(--shadow-soft);
+  height: fit-content;
 }
 
 .page-checkout .order-items {
@@ -22,10 +25,69 @@
 .page-checkout .order-item {
   display: grid;
   grid-template-columns: 80px 1fr auto;
+  height:80px;
   gap: var(--space-md);
   align-items: center;
+  margin-bottom: 1rem;
+}
+.page-checkout .order-item p{
+  border: 1px solid grey;
+  border-radius: .4rem;
 }
 
 .page-checkout .stepper {
   margin-bottom: var(--space-lg);
+}
+
+.page-checkout .order-item-img-wrapper{
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+.page-checkout img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10%;
+}
+
+.page-checkout .item-details{
+  display:  flex;
+  gap: .5rem;
+  font-size: .9rem;
+  font-weight: 500;
+}
+
+.page-checkout .totals{
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+  font-weight: 600;
+}
+
+.page-checkout .totals__row{
+  display:  flex;
+  justify-content: space-between;
+}
+
+.page-checkout .form__group.first-last{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.page-checkout ul{
+  list-style-type: disc;
+  padding-left: 2rem;
+  color: red;
+}
+
+.page-checkout .form__group.other-details-grid{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); gap: var(--space-md);
+}
+
+.page-checkout .payBtn:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
 }
