--- a/shop/templates/shop/partials/_checkout.html
+++ b/shop/templates/shop/partials/_checkout.html
@@ -1,4 +1,5 @@
-    <main id="main-container"  class="container section page-checkout">
+{% load static %}
+<main id="main-container"  class="container section page-checkout">
       <div class="section__header">
         <div>
           <h1 class="section__title">Checkout</h1>
@@ -17,6 +18,7 @@
         </ul>
 
       <div class="checkout-layout">
+        
         <section class="card form">
           <h3 style="margin:0;">Shipping details</h3>
           <div class="form__group first-last">
@@ -145,11 +147,21 @@
               <span>GHS {{cart_total}}</span>
             </div>
 
-            <button  class="btn btn--primary payBtn"> Pay </button>
+            <button  
+              class="btn btn--primary payBtn"
+              > Pay 
+                <!-- <img 
+                  src="{% static 'images/oval.svg' %}" 
+                  class="htmx-indicator"
+                  width="20"
+                  alt=""> -->
+            </button>
+
             <!-- <button class="btn btn--primary" href="#">Pay</a> -->
 
           </div>
         </aside>
+
       </div>
     </main>
 
@@ -163,6 +175,7 @@
           "keyup", checkEmptyFields
         )
       }
+      
       function checkEmptyFields(){
         const payBtn = document.querySelector(".payBtn");
         let disableBtn = false;
