added toast to callback url

--- a/shop/templates/shop/payment_success.html
+++ b/shop/templates/shop/payment_success.html
@@ -1,15 +1,9 @@
 {% extends 'shop/base.html' %}
 {% load static %}
 
-{% block body %}
+{% block content %}
 
-<h1> Payment info </h1>
-<p> Payment {{message}}</p>
+<h1 style="text-align: center;"> Payment info </h1>
+<h1 style="text-align: center; color:{{color}}"> Payment {{message}} </h1>
 
-{% endblock body %}
-
-
-
-
-
-
+{% endblock content %}
