--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -111,16 +111,18 @@
 </div>
 
 <script src="{% static 'shop/js/toasts.js' %}"></script>
-
+    {% load sweetify %}
+    {% sweetify %}
 <script>
+    
     document.body.addEventListener("showAlert", (evt) => {
     Swal.fire({
         title: evt.detail.title,
         text: evt.detail.text,
         icon: evt.detail.icon,
         timer: 3000
+        });
     });
-});
 </script>
 </body>
 </html>
