--- a/shop/templates/shop/partials/_cart.html
+++ b/shop/templates/shop/partials/_cart.html
@@ -36,7 +36,7 @@
             <span id="order-total">GHS {{cart_total}}</span>
         </div>
         </div>
-        <a class="btn btn--primary" href="{% url 'shop:checkout' %}">Proceed to checkout</a>
+        <a class="btn btn--primary{% if cart %} no-items {%endif%}" href="{% url 'shop:checkout' %}">Proceed to checkout</a>
     </aside>
     </div>
 </main>
